fix styling for too long media box links

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -526,6 +526,7 @@ a.button:hover {
 }
 
 #mediaBox .music-and-links .links {
+  width: 100%;
   display: inline-block;
   margin-top: 1em;
 }
