--- a/resources/assets/sass/artists/_mediaBox.scss
+++ b/resources/assets/sass/artists/_mediaBox.scss
@@ -12,6 +12,7 @@
         margin: 2em 0;
 
         .links {
+            width: 100%;
             display: inline-block;
             margin-top: 1em;
 
